# discrete-events-simulator

./: .gitignore  CMakeLists.txt  README.md  cmakelists.txt  run_pipeline.sh
examples/: tasks.yml  tasks2.yml
includes/schedulers/: BaseScheduler.hpp  EDF.hpp  FIFO.hpp  HPF.hpp  RoundRobin.hpp  SJF.hpp
includes/utils/: Tasks.hpp  ioutils.hpp
outputs/: FIFO_completed_tasks.yaml  HPF_completed_tasks.yaml  RoundRobin_completed_tasks.yaml  SJF_completed_tasks.yaml
src/: Tasks.cpp  main.cpp
src/gui/: gantt_chat.py
src/schedulers/: BaseScheduler.cpp  EDF.cpp  FIFO.cpp  HPF.cpp  RoundRobin.cpp  SJF.cpp
src/utils/: Tasks.cpp  ioutils.cpp
tests/: SchedulersTests.cpp
tests/tasks/: tasks1.yml  tasks3.yml
